dev api authentication.